--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+}
 .App {
   text-align: center;
 }
@@ -6,7 +11,8 @@
   height: 280px;
 }
 .App-header {
-  background-color: #222;
+  background-image: url("../../images/header.jpg");
+  background-position: center;
   height: 350px;
   padding: 20px;
   color: white;
