--- a/src/components/Character/Character.scss
+++ b/src/components/Character/Character.scss
@@ -1,3 +1,8 @@
+.sw-episode-title {
+  font-size: 24px;
+  font-weight: bold;
+  padding: 10px;
+}
 .sw-character-wrap {
   padding: 10px;
   display: flex;
